# b2m

./: .gitignore  README.md
notebooks/: 2021-2-13-cnn2d-scratch.ipynb
source/: CMakeLists.txt  Makefile  b2m_app  b2m_app.cpp  midiout.cpp  midiout.h  options_test.cpp  stft_nn.cpp  stft_nn.h  test  traced_model_cnn_0.pt
